--- a/interactive-particle-network/style.css
+++ b/interactive-particle-network/style.css
@@ -5,9 +5,21 @@ body {
   overflow: hidden;
 }
 
+body::before {
+  content: "";
+  position: fixed;
+  inset: -4%;
+  background: url("background.png") center / cover no-repeat;
+  filter: brightness(0.3);
+  transform: translate3d(var(--bg-x, 0px), var(--bg-y, 0px), 0) scale(1.02);
+  z-index: 0;
+  will-change: transform;
+}
+
 #backgroundCanvas,
 #starsCanvas {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 1;
 }
