--- a/interactive-particle-network/style.css
+++ b/interactive-particle-network/style.css
@@ -1,54 +1,13 @@
-﻿html,
 body {
   margin: 0;
-  padding: 0;
-  height: 200vh;
-  overflow-x: hidden;
-}
-
-.background {
-  background-image: url("test.png");
-  background-size: cover;
-  background-position: 50% 50%;
-  height: 200vh;
-  font: 900 39rem "";
-  line-height: 130vh;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  position: relative;
-  text-align: center;
+  height: 100vh;
+  background: #000;
   overflow: hidden;
 }
 
-.background::before {
-  content: "";
-  background-size: cover;
-  background-image: inherit;
-  background-position: 50% 50%;
+#backgroundCanvas,
+#starsCanvas {
   position: absolute;
   top: 0;
   left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: -1;
-}
-
-h1 {
-  position: absolute;
-  text-align: center;
-  width: 100%;
-  letter-spacing: 10px;
-  color: #fff;
-}
-
-h2 {
-  position: absolute;
-  letter-spacing: 2px;
-  top: 120vh;
-  width: 60%;
-  color: #fff;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 30px;
-  background-color: rgba(0, 0, 0, 0.3);
 }
